# rtipc-compiler

./: README.md  message.py  parser.py  pyproject.toml  rtipc.lark  rtipc.py
rtipc_compiler/: __init__.py  info.py  main.py  message.py  parser.py  protocol.py  rtipc.lark  utils.py
rtipc_compiler/c/: gen.py
rtipc_compiler/rust/: gen.py
